--- a/package.json
+++ b/package.json
@@ -1,37 +1,51 @@
 {
-  "name": "agenda-ccp",
+  "name": "bolt-expo-starter",
+  "main": "expo-router/entry",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.1.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "build:web": "expo export --platform web",
+    "lint": "expo lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "2.39.7",
-    "date-fns": "^3.3.1",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.4"
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/vector-icons": "^14.0.2",
+    "@lucide/lab": "^0.1.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@supabase/supabase-js": "^2.39.3",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "expo": "52.0.33",
+    "expo-blur": "^14.0.3",
+    "expo-camera": "^16.0.18",
+    "expo-constants": "^17.0.5",
+    "expo-font": "^13.0.3",
+    "expo-haptics": "^14.0.1",
+    "expo-linear-gradient": "^14.0.2",
+    "expo-linking": "^7.0.5",
+    "expo-router": "4.0.17",
+    "expo-splash-screen": "^0.29.21",
+    "expo-status-bar": "^2.0.1",
+    "expo-symbols": "^0.2.2",
+    "expo-system-ui": "^4.0.7",
+    "expo-web-browser": "^14.0.2",
+    "lucide-react-native": "^0.475.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.23.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.19.13",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   }
 }
